# ray-tracer

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Debug.cpp  Sphere.cpp
include/: Canvas.h  Color.h  Light.h  Material.h  Matrix.h  Object.h  Ray.h  Transformations.h  Tuple.h  Util.h
lib/: CMakeLists.txt  Canvas.cpp
test/: CMakeLists.txt  CanvasTest.cpp  ColorTest.cpp  LightTest.cpp  MatrixTest.cpp  ObjectTest.cpp  RayTest.cpp  TransformationsTest.cpp  TupleTest.cpp
